--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="gate__card">
       <div class="gate__title">Princess Portal</div>
-      <div class="gate__sub">tap to enter Zay’s space ✨</div>
+      <div class="gate__sub"></div>
 
       <button id="enterBtn" class="enterBtn" type="button">
         <span class="enterBtn__txt">Enter</span>
